--- a/docs/getting-started/04_changelog/96_3-6/3-6.md
+++ b/docs/getting-started/04_changelog/96_3-6/3-6.md
@@ -2,31 +2,46 @@
 
 *Release date: 31.05.2019*
 
-<glue42 name="addClass" class="newFeatures" element="p" text="New Features"> 
+<glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
-- Added `focusWindow()` method to the Swimlane UI API.
-- Added Region-Environment support.
-- [Java App Management](../../../glue42-concepts/application-management/java/index.html) API added.
-- Added an option to create an Activity and add a specific workspace lane and/or a tab group ID to it.
-- Dev Tools Launcher added.
-- Extended the Swimlane UI API to be backwards compatible with [**Glue42 Enterprise**](https://glue42.com/enterprise/) v2.x.x.x.
-- [JavaScript Hotkeys](../../../glue42-concepts/glue42-platform-features/index.html#hotkeys) API added.
-- Modified tab behavior of Glue42 Windows (dragging a tab group in an existing tab group; dragging out a tab and immediately sticking it to another window without having to drop it first).
-- Added an option for preserving user configurations when upgrading Glue42 Enterprise.
+> Added `focusWindow()` method to the Swimlane UI API.
 
-<glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes"> 
+> Added Region-Environment support.
 
-- Improvements in the Swimlane UI regarding tab and lane handling.
-- Improvements regarding saving and restoring apps in global layouts.
-- Improvements regarding events raised by certain Interop methods.
-- Improvements regarding order of auto started applications (high/low priority).
-- Glue42 Windows improvements regarding window display.
-- Fixed to show an error message when a user has no Java installed and tries to run a Java app.
-- Fixed saved workspaces to appear immediately without refresh in the App Manager.
-- Fixed delay in restoring a global layout with external (Java, WPF) apps.
+> [Java App Management](../../../glue42-concepts/application-management/java/index.html) API added.
+
+> Added an option to create an Activity and add a specific workspace lane and/or a tab group ID to it.
+
+> Dev Tools Launcher added.
+
+> Extended the Swimlane UI API to be backwards compatible with [**Glue42 Enterprise**](https://glue42.com/enterprise/) v2.x.x.x.
+
+> [JavaScript Hotkeys](../../../glue42-concepts/glue42-platform-features/index.html#hotkeys) API added.
+
+> Modified tab behavior of Glue42 Windows (dragging a tab group in an existing tab group; dragging out a tab and immediately sticking it to another window without having to drop it first).
+
+> Added an option for preserving user configurations when upgrading [**Glue42 Enterprise**](https://glue42.com/enterprise/).
+
+<glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
+
+> Improvements in the Swimlane UI regarding tab and lane handling.
+
+> Improvements regarding saving and restoring apps in global layouts.
+
+> Improvements regarding events raised by certain Interop methods.
+
+> Improvements regarding order of auto started applications (high/low priority).
+
+> Glue42 Windows improvements regarding window display.
+
+> Fixed to show an error message when a user has no Java installed and tries to run a Java app.
+
+> Fixed saved workspaces to appear immediately without refresh in the App Manager.
+
+> Fixed delay in restoring a global layout with external (Java, WPF) apps.
 
 ## Glue42 Connectors
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
-- [Excel Connector](../../../connectors/ms-office/excel-connector/javascript/index.html) - support for large data sheets added. 
+> [Excel Connector](../../../connectors/ms-office/excel-connector/javascript/index.html) - support for large data sheets added.
