--- a/docs/getting-started/04_changelog/98_3-4/3-4.md
+++ b/docs/getting-started/04_changelog/98_3-4/3-4.md
@@ -4,16 +4,24 @@
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
-- Added process ID to menu in tray and log.
-- Added installer version to tray menu.
-- Added a new [Notifications](../../../glue42-concepts/notifications/overview/index.html) panel.
-- [Context Viewer](../../../developers/dev-tools/index.html#context_viewer) - redesign and new functionality added.
+> Added process ID to menu in tray and log.
 
-<glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes"> 
+> Added installer version to tray menu.
 
-- Improvements regarding `exe` applications using Channels.
-- Improvements regarding restoring workspaces in Swimlane UI.
-- Fixed Channel context not syncing apps immediately after choosing a Channel.
-- Fixed wrong running apps count.
-- Fixed app instances staying alive after apps crash immediately after start.
-- Fixed not showing the warning message for reaching the window limit in the license. 
+> Added a new [Notifications](../../../glue42-concepts/notifications/overview/index.html) panel.
+
+> [Context Viewer](../../../developers/dev-tools/index.html#context_viewer) - redesign and new functionality added.
+
+<glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
+
+> Improvements regarding EXE applications using Channels.
+
+> Improvements regarding restoring workspaces in Swimlane UI.
+
+> Fixed Channel context not syncing apps immediately after choosing a Channel.
+
+> Fixed wrong running apps count.
+
+> Fixed app instances staying alive after apps crash immediately after start.
+
+> Fixed not showing the warning message for reaching the window limit in the license.
