--- a/docs/getting-started/04_changelog/99_3-3/3-3.md
+++ b/docs/getting-started/04_changelog/99_3-3/3-3.md
@@ -4,15 +4,22 @@
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
-- Added config for Activities colors.
-- Added application names to the application window list in the tray.
+> Added config for Activities colors.
 
-<glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes"> 
+> Added application names to the application window list in the tray.
 
-- Improvements regarding App Manager behavior.
-- Improvements regarding syncing data in Channels.
-- Fixed workspaces starting as normal windows, instead of maximized.
-- Fixed splash screen timeout after failing to load a layout.
-- Fixed Feedback form closing and opening issues.
-- Fixed window titles changing when including apps in a workspace.
-- Fixed broken display of WPF/Java app icons. 
+<glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
+
+> Improvements regarding App Manager behavior.
+
+> Improvements regarding syncing data in Channels.
+
+> Fixed workspaces starting as normal windows, instead of maximized.
+
+> Fixed splash screen timeout after failing to load a layout.
+
+> Fixed Feedback form closing and opening issues.
+
+> Fixed window titles changing when including apps in a workspace.
+
+> Fixed broken display of WPF/Java app icons.
