--- a/docs/getting-started/04_changelog/92_3-10/3-10.md
+++ b/docs/getting-started/04_changelog/92_3-10/3-10.md
@@ -4,94 +4,108 @@
 
 <glue42 name="addClass" class="breakingChanges" element="p" text="Breaking Changes">
 
-#### Context Merging
+> **Context Merging**
+>
+> Changed the mechanism of merging context data objects (used in [Shared Contexts](../../../glue42-concepts/data-sharing-between-apps/shared-contexts/overview/index.html), [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/overview/index.html)). When updating a context object, the new and the old values of its first level properties (e.g., the value of `a` in `{ a: { b: 0 } }`) are no longer merged, but the new value replaces the old value. For further clarification, see the examples below:
+>
+> ```javascript
+> // Creating a context object.
+> await glue.contexts.set("foo", { a: 1 });
+>
+> // First level properties are merged.
+> await glue.contexts.update("foo", { b: { c: 2 } });
+> // The new context now contains both `a` and `b`: `{ a: 1, b: { c: 2 } }`.
+>
+> // The values of first level properties are replaced during update.
+> await glue.contexts.update("foo", { b: { d: 3 } });
+> // The new context value is `{ a: 1, b: { d: 3 } }`.
+> ```
+>
+> As a contrast, in Glue42 3.9 the new context value would be `{ a: 1, b: { c: 2, d: 3 } }` after the last update in the example above.
+>
+> It is recommended that you update your apps to the latest Glue42 APIs:
+>
+> - [Glue42 JavaScript 5.2.0](https://www.npmjs.com/package/@glue42/desktop) (if you are using [auto injection](../../how-to/glue42-enable-your-app/javascript/index.html#auto_injecting_the_library), this will work out of the box)
+> - [Glue42 .NET 2018.2128.0](https://www.nuget.org/packages/Glue42/)
+> - Glue42 Java 1.3.9
 
-Changed the mechanism of merging context data objects (used in [Shared Contexts](../../../glue42-concepts/data-sharing-between-apps/shared-contexts/overview/index.html), [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/overview/index.html)). When updating a context object, the new and the old values of its first level properties (e.g., the value of `a` in `{ a: { b: 0 } }`) are no longer merged, but the new value replaces the old value. For further clarification, see the examples below:
-
-```javascript
-// Creating a context object.
-await glue.contexts.set("foo", { a: 1 });
-
-// First level properties are merged.
-await glue.contexts.update("foo", { b: { c: 2 } });
-// The new context now contains both `a` and `b`: `{ a: 1, b: { c: 2 } }`.
-
-// The values of first level properties are replaced during update.
-await glue.contexts.update("foo", { b: { d: 3 } });
-// The new context value is `{ a: 1, b: { d: 3 } }`.
-```
-
-As a contrast, in Glue42 3.9 the new context value would be `{ a: 1, b: { c: 2, d: 3 } }` after the last update in the example above.
-
-It is recommended that you update your apps to the latest Glue42 APIs:
-
-- [Glue42 JavaScript 5.2.0](https://www.npmjs.com/package/@glue42/desktop) (if you are using [auto injection](../../how-to/glue42-enable-your-app/javascript/index.html#auto_injecting_the_library), this will work out of the box)
-- [Glue42 .NET 2018.2128.0](https://www.nuget.org/packages/Glue42/)
-- Glue42 Java 1.3.9
-
-#### Storing Data in the Application Default Layout
-
-Added support for saving custom context data in the Application Default layout using the [`onSaveRequested()`](../../../reference/glue/latest/layouts/index.html#API-onSaveRequested) method of the Layouts API.
-
-If your application already uses `onSaveRequested()` to store data when a Global layout is saved, you must update your code to check for the [type of the layout](../../../glue42-concepts/windows/layouts/javascript/index.html#layout_types) in the save request (e.g., `"Global"`, `"ApplicationDefault"`, etc.). This is necessary if you want to store data only in a certain type of layout, or if you want to store different data depending on the layout (see the example below). If you don't update your code, the data that your application used to save only when participating in a Global layout, will now also be saved in its Application Default layout if your app is started and closed independently (i.e., not part of a Global layout).
-
-```javascript
-glue.layouts.onSaveRequested((requestInfo) => {
-    // Determine the layout type.
-    const layoutType = requestInfo.layoutType;
-
-    // Return different context data depending on the layout type.
-    if (layoutType === "ApplicationDefault") {
-        return { windowContext: { gridWidth: 42 } };
-
-    } else if (layoutType === "Global") {
-        return { windowContext: { gridWidth: 420 } };
-
-    } else {
-        // Return if not interested in other layout types.
-        return;
-    };
-});
-```
+> **Storing Data in the Application Default Layout**
+>
+> Added support for saving custom context data in the Application Default layout using the [`onSaveRequested()`](../../../reference/glue/latest/layouts/index.html#API-onSaveRequested) method of the Layouts API.
+>
+> If your application already uses `onSaveRequested()` to store data when a Global layout is saved, you must update your code to check for the [type of the layout](../../../glue42-concepts/windows/layouts/javascript/index.html#layout_types) in the save request (e.g., `"Global"`, `"ApplicationDefault"`, etc.). This is necessary if you want to store data only in a certain type of layout, or if you want to store different data depending on the layout (see the example below). If you don't update your code, the data that your application used to save only when participating in a Global layout, will now also be saved in its Application Default layout if your app is started and closed independently (i.e., not part of a Global layout).
+>
+> ```javascript
+> glue.layouts.onSaveRequested((requestInfo) => {
+>     // Determine the layout type.
+>     const layoutType = requestInfo.layoutType;
+>
+>     // Return different context data depending on the layout type.
+>     if (layoutType === "ApplicationDefault") {
+>         return { windowContext: { gridWidth: 42 } };
+>
+>     } else if (layoutType === "Global") {
+>         return { windowContext: { gridWidth: 420 } };
+>
+>     } else {
+>         // Return if not interested in other layout types.
+>         return;
+>     };
+> });
+> ```
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
-- [Workspaces](../../../glue42-concepts/windows/workspaces/overview/index.html) functionality and [Workspaces API](../../../reference/glue/latest/workspaces/index.html) added.
+> [Workspaces](../../../glue42-concepts/windows/workspaces/overview/index.html) functionality and [Workspaces API](../../../reference/glue/latest/workspaces/index.html) added.
+>
+> ![Workspaces](../../../images/workspaces/workspaces.gif)
 
-![Workspaces](../../../images/workspaces/workspaces.gif)
+> New default dark and light [Glue42 themes](../../../glue42-concepts/windows/themes/overview/index.html).
+>
+> *Click on the image and use the slider to see the differences between the new and the old Glue42 **Day** themes.*
+>
+> <glue42 name="slider" top="../../../images/changelog/new-light.png" bottom="../../../images/changelog/old-light.png">
+>
+> *Click on the image and use the slider to see the differences between the new and the old Glue42 **Night** themes.*
+>
+> <glue42 name="slider" top="../../../images/changelog/new-dark.png" bottom="../../../images/changelog/old-dark.png">
 
-- New default dark and light [Glue42 themes](../../../glue42-concepts/windows/themes/overview/index.html).
+> New [Themes](../../../glue42-concepts/windows/themes/javascript/index.html) JavaScript API.
 
-*Click on the image and use the slider to see the differences between the new and the old Glue42 **Day** themes.*
+> New methods for joining/leaving [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/javascript/index.html) programmatically, subscribing for a specific Channel and managing Channel context in the Channels JavaScript API.
 
-<glue42 name="slider" top="../../../images/changelog/new-light.png" bottom="../../../images/changelog/old-light.png">
+> New [Performance Metrics](../../../glue42-concepts/metrics/overview/index.html#generation-performance_metrics).
 
-*Click on the image and use the slider to see the differences between the new and the old Glue42 **Night** themes.*
+> Applications can now [store custom data](../../../glue42-concepts/windows/layouts/javascript/index.html#saving_and_updating_context) in the [Application Default layout](../../../glue42-concepts/windows/layouts/overview/index.html).
 
-<glue42 name="slider" top="../../../images/changelog/new-dark.png" bottom="../../../images/changelog/old-dark.png">
+> The [title format](../../../developers/configuration/system/index.html#application_settings) of Glue42 Windows can now be set through system configuration.
 
-- New [Themes](../../../glue42-concepts/windows/themes/javascript/index.html) JavaScript API.
-- New methods for joining/leaving [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/javascript/index.html) programmatically, subscribing for a specific Channel and managing Channel context in the Channels JavaScript API.
-- New [Performance Metrics](../../../glue42-concepts/metrics/overview/index.html#generation-performance_metrics).
-- Applications can now [store custom data](../../../glue42-concepts/windows/layouts/javascript/index.html#saving_and_updating_context) in the [Application Default layout](../../../glue42-concepts/windows/layouts/overview/index.html).
-- The [title format](../../../developers/configuration/system/index.html#application_settings) of Glue42 Windows can now be set through system configuration.
-- Applications can now be [grouped in folders and subfolders](../../../developers/configuration/application/index.html#grouping_applications) in the Application Manager of the Glue42 Toolbar.
-- The [**Glue42 Enterprise**](https://glue42.com/enterprise/) system configuration can now be extended with custom configuration from a REST service.
-- The native browser `window.open()` call can now open browser windows or Glue42 Windows, or can be entirely disabled based on [system configuration](../../../glue42-concepts/windows/window-management/javascript/index.html#opening_windows-handling_the_browser_windowopen).
-- Added event listener for [Application Shutdown](../../how-to/glue42-enable-your-app/java/index.html#referencing_and_initialization-application_shutdown) to the Java API.
-- VBA documentation added - [Glue42 Enable Your App](../../how-to/glue42-enable-your-app/vba/index.html), [Interop](../../../glue42-concepts/data-sharing-between-apps/interop/vba/index.html), [Shared Contexts](../../../glue42-concepts/data-sharing-between-apps/shared-contexts/vba/index.html), [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/vba/index.html), [Window Management](../../../glue42-concepts/windows/window-management/vba/index.html), [VBA Reference](../../how-to/glue42-enable-your-app/vba/index.html#comvba_reference).
+> Applications can now be [grouped in folders and subfolders](../../../developers/configuration/application/index.html#grouping_applications) in the Application Manager of the Glue42 Toolbar.
+
+> The [**Glue42 Enterprise**](https://glue42.com/enterprise/) system configuration can now be extended with custom configuration from a REST service.
+
+> The native browser `window.open()` call can now open browser windows or Glue42 Windows, or can be entirely disabled based on [system configuration](../../../glue42-concepts/windows/window-management/javascript/index.html#opening_windows-handling_the_browser_windowopen).
+
+> Added event listener for [Application Shutdown](../../how-to/glue42-enable-your-app/java/index.html#referencing_and_initialization-application_shutdown) to the Java API.
+
+> VBA documentation added - [Glue42 Enable Your App](../../how-to/glue42-enable-your-app/vba/index.html), [Interop](../../../glue42-concepts/data-sharing-between-apps/interop/vba/index.html), [Shared Contexts](../../../glue42-concepts/data-sharing-between-apps/shared-contexts/vba/index.html), [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/vba/index.html), [Window Management](../../../glue42-concepts/windows/window-management/vba/index.html), [VBA Reference](../../how-to/glue42-enable-your-app/vba/index.html#comvba_reference).
 
 <glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
-- [**Glue42 Enterprise**](https://glue42.com/enterprise/) upgraded with Electron 9.
-- The Glue42 Gateway can now be [configured to connect to a random free port](../../../developers/configuration/system/index.html#dynamic_gateway_port) on startup.
-- Improvements in the [Intents API](../../../reference/glue/latest/intents/index.html) related to better handling raised Intents.
-- Improvements related to the design of the download bar for [downloading files](../../../glue42-concepts/glue42-platform-features/index.html#downloading_files) in Glue42 windows.
-- [**Glue42 Enterprise**](https://glue42.com/enterprise/) now reads [Intents](../../fdc3-compliance/index.html#fdc3_for_glue42_enterprise-intents) also from the FDC3 wrapper configuration.
+> [**Glue42 Enterprise**](https://glue42.com/enterprise/) upgraded with Electron 9.
+
+> The Glue42 Gateway can now be [configured to connect to a random free port](../../../developers/configuration/system/index.html#dynamic_gateway_port) on startup.
+
+> Improvements in the [Intents API](../../../reference/glue/latest/intents/index.html) related to better handling raised Intents.
+
+> Improvements related to the design of the download bar for [downloading files](../../../glue42-concepts/glue42-platform-features/index.html#downloading_files) in Glue42 windows.
+
+> [**Glue42 Enterprise**](https://glue42.com/enterprise/) now reads [Intents](../../fdc3-compliance/index.html#fdc3_for_glue42_enterprise-intents) also from the FDC3 wrapper configuration.
 
 ## Glue42 Connectors
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
-- [Salesforce Connector](../../../connectors/salesforce-connector/overview/index.html) documentation added.
-- [Fidessa Connector](../../../connectors/fidessa-connector/overview/index.html) added (shipped separately from the trial installer, [contact us](https://glue42.com/contacts/) for more information). 
+> [Salesforce Connector](../../../connectors/salesforce-connector/overview/index.html) documentation added.
+
+> [Fidessa Connector](../../../connectors/fidessa-connector/overview/index.html) added (shipped separately from the trial installer, [contact us](https://glue42.com/contacts/) for more information).
