--- a/docs/getting-started/04_changelog/93_3-9/3-9.md
+++ b/docs/getting-started/04_changelog/93_3-9/3-9.md
@@ -4,28 +4,42 @@
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
-- New [Glue42 Toolbar](../../../glue42-concepts/glue42-toolbar/index.html) with a new look and improved functionalities.
-- [Summary Metrics](../../../glue42-concepts/metrics/overview/index.html#generation-summary_metrics) added.
-- Additions to the [.NET Window Management API](../../../glue42-concepts/windows/window-management/net/index.html).
-- JavaScript [Intents API](../../../glue42-concepts/intents/overview/index.html) added.
-- JavaScript [Displays API](../../../glue42-concepts/glue42-platform-features/index.html#displays) added.
-- Logging to files from JavaScript apps through the [Logger API](../../../glue42-concepts/glue42-platform-features/index.html#logging) added.
-- Support for [FDC3 Standards](../../fdc3-compliance/index.html) added.
-- Support for Flash Plugins added.
-- A [default global layout](../../../glue42-concepts/windows/layouts/overview/index.html#default_global_layout) added.
-- Option to prevent [page refresh](../../../glue42-concepts/windows/window-management/javascript/index.html#window_events-close_and_refresh-preventing_page_refresh) added.
+> New [Glue42 Toolbar](../../../glue42-concepts/glue42-toolbar/index.html) with a new look and improved functionalities.
+
+> [Summary Metrics](../../../glue42-concepts/metrics/overview/index.html#generation-summary_metrics) added.
+
+> Additions to the [.NET Window Management API](../../../glue42-concepts/windows/window-management/net/index.html).
+
+> JavaScript [Intents API](../../../glue42-concepts/intents/overview/index.html) added.
+
+> JavaScript [Displays API](../../../glue42-concepts/glue42-platform-features/index.html#displays) added.
+
+> Logging to files from JavaScript apps through the [Logger API](../../../glue42-concepts/glue42-platform-features/index.html#logging) added.
+
+> Support for [FDC3 Standards](../../fdc3-compliance/index.html) added.
+
+> Support for Flash Plugins added.
+
+> A [default global layout](../../../glue42-concepts/windows/layouts/overview/index.html#default_global_layout) added.
+
+> Option to prevent [page refresh](../../../glue42-concepts/windows/window-management/javascript/index.html#window_events-close_and_refresh-preventing_page_refresh) added.
 
 <glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
-- [**Glue42 Enterprise**](https://glue42.com/enterprise/) upgraded with Electron 7.
-- Added the version of the Glue42 JavaScript library to the [Applications View](../../what-is-glue42/general-overview/index.html#using_glue42_enterprise-applications_view).
-- You can now register [asynchronous Interop methods](../../../glue42-concepts/data-sharing-between-apps/interop/javascript/index.html#method_registration-asynchronous_results) directly with the [`glue.interop.register()`](../../../reference/glue/latest/interop/index.html#API-register) method.
-- Improvements related to Process Reuse.
-- Improvements related to the arguments passed to the [`glue.windows.open()`](../../../reference/glue/latest/windows/index.html#API-open) method.
-- Fixes related to better handling of apps after resuming the OS from sleep.
+> [**Glue42 Enterprise**](https://glue42.com/enterprise/) upgraded with Electron 7.
+
+> Added the version of the Glue42 JavaScript library to the [Applications View](../../what-is-glue42/general-overview/index.html#using_glue42_enterprise-applications_view).
+
+> You can now register [asynchronous Interop methods](../../../glue42-concepts/data-sharing-between-apps/interop/javascript/index.html#method_registration-asynchronous_results) directly with the [`glue.interop.register()`](../../../reference/glue/latest/interop/index.html#API-register) method.
+
+> Improvements related to Process Reuse.
+
+> Improvements related to the arguments passed to the [`glue.windows.open()`](../../../reference/glue/latest/windows/index.html#API-open) method.
+
+> Fixes related to better handling of apps after resuming the OS from sleep.
 
 ## Glue42 Connectors
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
-- Added support for the Bloomberg Market Data service in the [Bloomberg Connector](../../../connectors/bloomberg-connector/market-data/overview/index.html).
+> Added support for the Bloomberg Market Data service in the [Bloomberg Connector](../../../connectors/bloomberg-connector/market-data/overview/index.html).
