--- a/docs/getting-started/04_changelog/97_3-5/3-5.md
+++ b/docs/getting-started/04_changelog/97_3-5/3-5.md
@@ -4,30 +4,46 @@
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
-- Interop method for retrieving system information added.
-- [Interop Viewer](../../../developers/dev-tools/index.html#interop_viewer) added.
-- Added an "About" section in the Glue42 Toolbar.
-- Support for nested workspaces added.
-- Added cascade initial window positioning of subsequent instances of the same app.
-- Added support for importing/exporting Layouts.
-- Spell check functionality added.
-- Added a JavaScript method for retrieving workspace IDs.
-- [.NET Channels](../../../glue42-concepts/data-sharing-between-apps/channels/net/index.html) API added.
-- Added a Swimlane UI method for opening a workspace and passing a context object to all windows in it, except to Activity ones.
+> Interop method for retrieving system information added.
 
-<glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes"> 
+> [Interop Viewer](../../../developers/dev-tools/index.html#interop_viewer) added.
 
-- Improvements regarding window configurations in Swimlane UI.
-- Improvements regarding handling windows and tabs in global layouts.
-- Improvements regarding behavior of Glue42 enabled `exe` apps.
-- [Context Viewer](../../../developers/dev-tools/index.html#context_viewer) various improvements.
-- Fixed splash window closing earlier on shutdown.
-- Fixed missing scroll bar in Context Viewer.
-- Fixed Channels to be turned off by default.
-- Fixed disabling spell check per application not working when spell check is globally enabled.
+> Added an "About" section in the Glue42 Toolbar.
+
+> Support for nested workspaces added.
+
+> Added cascade initial window positioning of subsequent instances of the same app.
+
+> Added support for importing/exporting Layouts.
+
+> Spell check functionality added.
+
+> Added a JavaScript method for retrieving workspace IDs.
+
+> [.NET Channels](../../../glue42-concepts/data-sharing-between-apps/channels/net/index.html) API added.
+
+> Added a Swimlane UI method for opening a workspace and passing a context object to all windows in it, except to Activity ones.
+
+<glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
+
+> Improvements regarding window configurations in Swimlane UI.
+
+> Improvements regarding handling windows and tabs in global layouts.
+
+> Improvements regarding behavior of Glue42 enabled EXE apps.
+
+> [Context Viewer](../../../developers/dev-tools/index.html#context_viewer) various improvements.
+
+> Fixed splash window closing earlier on shutdown.
+
+> Fixed missing scroll bar in Context Viewer.
+
+> Fixed Channels to be turned off by default.
+
+> Fixed disabling spell check per application not working when spell check is globally enabled.
 
 ## Glue42 Connectors
 
-<glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes"> 
+<glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
-- Improvements regarding the `glue4office` library. 
+> Improvements regarding the `glue4office` library.
